# portfolio-ai-api

./: README.md  pyproject.toml  report.md
knowledge/: Joel Mbaka CV.txt
src/portfolio_ai/: api.py  crew.py  main.py
src/portfolio_ai/config/: agents.yaml  tasks.yaml
