[project]
name = "portfolio_ai"
version = "0.1.0"
description = "portfolio-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.165.0,<1.0.0",
    "google-generativeai>=0.8.5",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
portfolio_ai = "portfolio_ai.main:run"
run_crew = "portfolio_ai.main:run"
train = "portfolio_ai.main:train"
replay = "portfolio_ai.main:replay"
test = "portfolio_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.crewai]
type = "crew"
